# truthcoin-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/chain_objects/: markets.rs  mod.rs  slots.rs
src/crypto/: hash.rs
src/custom_math/: custom_math.rs  mod.rs  nice_matrix.rs  outcome_consensus.rs
src/r-code-and-references/: decision-slots.xlsx
